--- a/index.html
+++ b/index.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="styles.css" />
-  <div>
-    <!-- Headers help to draw attention to titles in your document -->
-    <h1>Header 1</h1>
-    <h2>Header 2</h2>
-    <p>This is a paragraph</p>
-    <button class="click-button">Click Me!</button>
-    <button id="this-button">Another button</button>
-    <a href="https://wso.williams.edu">Link to WSO</a>
+<head>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- NavBar-->
+  <nav id=navbar class=nav>
+    <ul class=nav-list>
+      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact Me</a></li>
+    </ul>
+  </nav>
+
+  <!-- Name-->
+  <div id="name">
+    <h2>Elijah Tamarchenko</h2>
+    <p>Welcome to my Page</p>
   </div>
-  <div class="container">
-    <h3>Organize your document</h3>
-    <p>
-      If the organisational structure make sense, it becomes a lot easier to style documents
-    </p>
-    <div>
-      <p>
-        hello
-      </p>
-    </div>
+
+  <!-- About Me-->
+  <div id="about-me">
+    <h3>About Me</h3>
+    <p class=about-me-section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat aliquet lacinia.
+    Fusce lobortis facilisis gravida. Aenean aliquam semper nulla, pellentesque bibendum odio
+    rutrum sed. Morbi at finibus lorem, et finibus lacus. Vivamus a diam ornare, efficitur nulla
+    in, dignissim tortor. Maecenas rutrum efficitur lacus, quis dictum enim sagittis eget. Nam
+    sed sapien quis enim aliquam pharetra. Aenean sodales enim id sollicitudin rutrum. Nullam
+    mollis risus in sapien lacinia pharetra. Vestibulum sed sodales neque. Curabitur eros
+    tortor, mollis vitae ipsum eu, vehicula dignissim ipsum. Sed consectetur pharetra euismod.
+    Ut neque augue, tincidunt sit amet maximus at, tincidunt id elit. Etiam vel nibh justo</p>
   </div>
-  <ul>
-    <li>Unordered list item 1</li>
-    <li>Unordered list item 2</li>
-    <li>Unordered list item 3</li>
-  </ul>
-  <ol>
-    <li>Ordered list item 1</li>
-    <li>Ordered list item 2</li>
-    <li>Ordered list item 3</li>
-  </ol>
-  <br />
-  <!-- br stands for line break, and creates a gap between elements -->
-  <h2>Flexbox</h2>
-  <small></small>
-    Flexbox provides a quick method of having responsive elements. A good resource to learn it is
-    <a href="https://flexboxfroggy.com/">here</a>. Try resizing your browser and see what happens.
-  </small>
-  <div class="flex-container">
-    <div>
-      Lorem Ipsum
-    </div>
-    <div>Dolor est</div>
-    <div>
-      Et tu, Brutus
-    </div>
-    <div>
-      Another
-      <div></div>
-    </div>
-  </div>
-  <h2>Grids</h2>
-  <small>
-    Grids are an alternative method of having responsive elements. A good resource to learn it is
-    <a href="https://cssgridgarden.com/">here</a>. Try resizing your browser and see what happens.
-  </small>
-  <div class="grid-container">
-    <div>
-      Lorem Ipsum
-    </div>
-    <div>Dolor est</div>
-    <div>
-      Et tu, Brutus
-    </div>
-    <div>
-      Another
-      <div></div>
+
+  <!-- Projects -->
+  <div id="projects">
+    <h3>Projects</h3>
+    <div class="projects-grid">
+      <div class="project-tile">
+        <h4>Project</h4>
+        <p>Currently in Progress, coming soon</p>
+      </div>
+      <div class="project-tile">
+        <h4>Project 2</h4>
+        <p>Currently in Progress, coming soon</p>
+      </div>
+      <div class="project-tile">
+        <h4>Project 3</h4>
+        <p>Currently in Progress, coming soon</p>
+      </div>
     </div>
   </div>
+
+  <!-- Contact Me-->
+  <div id="contact-me">
+    <h3>Contact Me</h3>
+    <div class="socials">
+      <a href="https://www.facebook.com/elijahtamarchenko">Facebook</a>
+      <a href="https://www.github.com/Conqueror1776">GitHub</a>
+      <a href="mailto:elijahtamarchenko@gmail.com">Email</a>
+    </div>
+  </div>
+
+
+<footer>
+<p>© Elijah Tamarchenko 2020</p>
+</footer>
+
+  </div>
+
+  </script>
+</body>
 </html>
