--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
   <!-- About Me-->
   <div id="about-me">
     <h3>About Me</h3>
-    <p class=about-me-section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat aliquet lacinia.
-    Fusce lobortis facilisis gravida. Aenean aliquam semper nulla, pellentesque bibendum odio
-    rutrum sed. Morbi at finibus lorem, et finibus lacus. Vivamus a diam ornare, efficitur nulla
-    in, dignissim tortor. Maecenas rutrum efficitur lacus, quis dictum enim sagittis eget. Nam
-    sed sapien quis enim aliquam pharetra. Aenean sodales enim id sollicitudin rutrum. Nullam
-    mollis risus in sapien lacinia pharetra. Vestibulum sed sodales neque. Curabitur eros
-    tortor, mollis vitae ipsum eu, vehicula dignissim ipsum. Sed consectetur pharetra euismod.
-    Ut neque augue, tincidunt sit amet maximus at, tincidunt id elit. Etiam vel nibh justo</p>
+    <p class=about-me-section>
+      I'm an undergraduate student at Williams College, currently planning
+      on majoring in Computer Science and Statistics, with a concentration
+      in Cognitive Science. I am currently very interested in web development
+      and data analytics, and am spending my time outside of class exploring
+      these two areas, building my skills, and trying to gain as much experience
+      and exposure as I can. I am also a member of Williams
+      Ultimate Frisbee, and can be found most commonly in Sawyer library
+      working on a P-set.
+    </p>
   </div>
 
   <!-- Projects -->
