--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Name-->
   <div id="name">
     <h2>Elijah Tamarchenko</h2>
-    <p>Welcome to my Page</p>
+    <p>Web Developer / Data Analyst</p>
   </div>
 
   <!-- About Me-->
@@ -54,7 +54,7 @@
   </div>
 
   <!-- Contact Me-->
-  <div id="contact-me">
+  <div id="contact">
     <h3>Contact Me</h3>
     <div class="socials">
       <a href="https://www.facebook.com/elijahtamarchenko">Facebook</a>
