--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul class=nav-list>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact Me</a></li>
+      <li><a href="#contact">Contacts</a></li>
     </ul>
   </nav>
 
@@ -55,7 +55,7 @@
 
   <!-- Contact Me-->
   <div id="contact">
-    <h3>Contact Me</h3>
+    <h3>Contacts</h3>
     <div class="socials">
       <a href="https://www.facebook.com/elijahtamarchenko">Facebook</a>
       <a href="https://www.github.com/Conqueror1776">GitHub</a>
