Added simple CSS animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
   <!-- NavBar-->
   <nav id=navbar class=nav>
+    <div>
+    </div>
     <ul class=nav-list>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#projects">Projects</a></li>
