Updated github username

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h3>Contacts</h3>
     <div class="socials">
       <a href="https://www.facebook.com/elijahtamarchenko">Facebook</a>
-      <a href="https://www.github.com/Conqueror1776">GitHub</a>
+      <a href="https://www.github.com/etchenko">GitHub</a>
       <a href="mailto:elijahtamarchenko@gmail.com">Email</a>
     </div>
   </div>
